@@ -363,6 +363,28 @@ module ActionView
       def image_submit_tag(source, options = {})
         tag :input, { "type" => "image", "src" => image_path(source) }.update(options.stringify_keys)
       end
+
+      # Creates a field set for grouping HTML form elements.
+      #
+      # <tt>legend</tt> will become the fieldset's title (optional as per W3C).
+      #
+      # === Examples
+      #   <% fieldset_tag do %>
+      #     <p><%= text_field_tag 'name' %></p>
+      #   <% end %>
+      #   # => <fieldset><p><input id="name" name="name" type="text" /></p></fieldset>
+      #
+      #   <% fieldset_tag 'Your details' do %>
+      #     <p><%= text_field_tag 'name' %></p>
+      #   <% end %>
+      #   # => <fieldset><legend>Your details</legend><p><input id="name" name="name" type="text" /></p></fieldset>
+      def fieldset_tag(legend = nil, &block)
+        content = capture(&block)
+        concat(tag(:fieldset, {}, true), block.binding)
+        concat(content_tag(:legend, legend), block.binding) unless legend.blank?
+        concat(content, block.binding)
+        concat("</fieldset>", block.binding)
+      end
       
       private
         def html_options_for_form(url_for_options, options, *parameters_for_url)
