@@ -1,5 +1,7 @@
 *SVN*
 
+* Add fieldset_tag for generating fieldsets, closes #9477. [djanowski]
+
 * Allow additional parameters to be passed to named route helpers when using positional arguments.  Closes #8930 [ian.w.white@gmail.com]
 
 * Make render :partial work with a :collection of Hashes, previously this wasn't possible due to backwards compatibility restrictions.  [lifofifo]
